--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,12 @@
     <artifactId>allure-testng</artifactId>
     <version>2.23.0</version>
 </dependency>
-
+<!--https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-failsafe-plugin -->
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-failsafe-plugin</artifactId>
+			<version>3.1.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
