--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.1.2</version>
 				<configuration>
-					<includes>
+					<!--<includes>
 							<include>**/TestRunner.java</include>
-						</includes>
+						</includes>-->
 					<suiteXmlFiles>
 						<suiteXmlFile>testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
@@ -23,12 +23,12 @@
 		</plugins>
 	</build>
 	<properties>
-		<maven.compiler.source>
-			1.8</maven.compiler.source>
+		<maven.compiler.source>	1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
 		
 	</properties>
+	
 	
 	<dependencies>
 		<!--
@@ -149,5 +149,11 @@
 			<version>3.1.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.24</version>
+    <scope>provided</scope>
+</dependency>
 	</dependencies>
 </project>
